@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.471 2007/02/06 12:19:27 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.472 2007/02/06 14:19:00 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -79,6 +79,11 @@ PH/17 Added dsn_from option to vary the From: line in DSNs.
 
 PH/18 Flush SMTP output before performing a callout, unless control =
       no_callout_flush is set.
+
+PH/19 Change 4.64/PH/36 introduced a bug: when address_retry_include_sender
+      was true (the default) a successful delivery failed to delete the retry
+      item, thus causing premature timeout of the address. The bug is now
+      fixed.
 
 
 Exim version 4.66
